// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`PageCard > renders with as correctly 1`] = `
"<section data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <!--v-if-->
  </div>
  <!--v-if-->
</section>"
`;

exports[`PageCard > renders with b24ui correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-bold">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with body slot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">Body slot</div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with class correctly 1`] = `
"<div data-orientation="vertical" class="relative flex bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) rounded-xl">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with default slot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>Default slot
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with description correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <!--v-if-->
      <div class="flex-1">
        <!--v-if-->
        <div class="text-lg text-pretty">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with description slot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description slot</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with footer slot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <div class="pt-4 mt-auto border-(--ui-color-design-outline-content-divider) border-t-1">Footer slot</div>
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with header slot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <div class="mb-4 border-(--ui-color-design-outline-content-divider) border-b-1">Header slot</div>
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color air-primary correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color air-primary correctly 2`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color air-primary-alert correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-alert-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color air-primary-copilot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-copilot-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color air-primary-success correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-success-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight color air-primary-warning correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-warning-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with icon correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <!--v-if-->
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with leading slot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5">Leading slot</div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation horizontal correctly 1`] = `
"<div data-orientation="horizontal" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 lg:grid-cols-2 lg:items-center">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation horizontal reverse correctly 1`] = `
"<div data-orientation="horizontal" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6 lg:grid-cols-2 lg:items-center">
    <div class="flex flex-col flex-1 items-start lg:order-last">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation vertical correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with orientation vertical reverse correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start lg:order-last">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with title correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <!--v-if-->
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <!--v-if-->
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with title slot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title slot</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) transition hover:bg-elevated/50 has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <!--v-if-->
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Card link" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg) border-(--ui-color-design-outline-stroke) border-(length:--ui-design-outline-stroke-weight) text-(--ui-color-design-outline-content) transition hover:bg-elevated/50 has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline-accent correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-a1-bg) border-(--ui-color-design-outline-a1-stroke) border-(length:--ui-design-outline-a1-stroke-weight) text-(--ui-color-design-outline-a1-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-accent highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-a1-bg) border-(--ui-color-design-outline-a1-stroke) border-(length:--ui-design-outline-a1-stroke-weight) text-(--ui-color-design-outline-a1-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-accent to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-a1-bg) border-(--ui-color-design-outline-a1-stroke) border-(length:--ui-design-outline-a1-stroke-weight) text-(--ui-color-design-outline-a1-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline-accent-2 correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-a2-bg) border-(--ui-color-design-outline-a2-stroke) border-(length:--ui-design-outline-a2-stroke-weight) text-(--ui-color-design-outline-a2-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-accent-2 highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-a2-bg) border-(--ui-color-design-outline-a2-stroke) border-(length:--ui-design-outline-a2-stroke-weight) text-(--ui-color-design-outline-a2-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-accent-2 to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-a2-bg) border-(--ui-color-design-outline-a2-stroke) border-(length:--ui-design-outline-a2-stroke-weight) text-(--ui-color-design-outline-a2-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline-alert correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-alert-bg) border-(--ui-color-design-outline-alert-stroke) border-(length:--ui-design-outline-alert-stroke-weight) text-(--ui-color-design-outline-alert-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-alert highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-alert-bg) border-(--ui-color-design-outline-alert-stroke) border-(length:--ui-design-outline-alert-stroke-weight) text-(--ui-color-design-outline-alert-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-alert to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-alert-bg) border-(--ui-color-design-outline-alert-stroke) border-(length:--ui-design-outline-alert-stroke-weight) text-(--ui-color-design-outline-alert-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline-alt correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg-alt) border-(--ui-color-design-outline-content-divider) border-(length:--ui-design-outline-stroke-weight-alt) text-(--ui-color-design-outline-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-alt highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg-alt) border-(--ui-color-design-outline-content-divider) border-(length:--ui-design-outline-stroke-weight-alt) text-(--ui-color-design-outline-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-alt to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-bg-alt) border-(--ui-color-design-outline-content-divider) border-(length:--ui-design-outline-stroke-weight-alt) text-(--ui-color-design-outline-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline-copilot correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-copilot-bg) border-(--ui-color-design-outline-copilot-stroke) border-(length:--ui-design-outline-copilot-stroke-weight) text-(--ui-color-design-outline-copilot-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-copilot highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-copilot-bg) border-(--ui-color-design-outline-copilot-stroke) border-(length:--ui-design-outline-copilot-stroke-weight) text-(--ui-color-design-outline-copilot-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-copilot to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-copilot-bg) border-(--ui-color-design-outline-copilot-stroke) border-(length:--ui-design-outline-copilot-stroke-weight) text-(--ui-color-design-outline-copilot-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline-no-accent correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-na-bg) border-(--ui-color-design-outline-na-stroke) border-(length:--ui-design-outline-na-stroke-weight) text-(--ui-color-design-outline-na-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-no-accent highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-na-bg) border-(--ui-color-design-outline-na-stroke) border-(length:--ui-design-outline-na-stroke-weight) text-(--ui-color-design-outline-na-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-no-accent to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-na-bg) border-(--ui-color-design-outline-na-stroke) border-(length:--ui-design-outline-na-stroke-weight) text-(--ui-color-design-outline-na-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline-success correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-success-bg) border-(--ui-color-design-outline-success-stroke) border-(length:--ui-design-outline-success-stroke-weight) text-(--ui-color-design-outline-success-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-success highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-success-bg) border-(--ui-color-design-outline-success-stroke) border-(length:--ui-design-outline-success-stroke-weight) text-(--ui-color-design-outline-success-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-success to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-success-bg) border-(--ui-color-design-outline-success-stroke) border-(length:--ui-design-outline-success-stroke-weight) text-(--ui-color-design-outline-success-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant outline-warning correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-warning-bg) border-(--ui-color-design-outline-warning-stroke) border-(length:--ui-design-outline-warning-stroke-weight) text-(--ui-color-design-outline-warning-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-warning highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-warning-bg) border-(--ui-color-design-outline-warning-stroke) border-(length:--ui-design-outline-warning-stroke-weight) text-(--ui-color-design-outline-warning-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant outline-warning to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-outline-warning-bg) border-(--ui-color-design-outline-warning-stroke) border-(length:--ui-design-outline-warning-stroke-weight) text-(--ui-color-design-outline-warning-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant plain correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-bg) border-(--ui-color-design-plain-stroke) border-(length:--ui-design-plain-stroke-weight) text-(--ui-color-design-plain-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant plain highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-bg) border-(--ui-color-design-plain-stroke) border-(length:--ui-design-plain-stroke-weight) text-(--ui-color-design-plain-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant plain to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-bg) border-(--ui-color-design-plain-stroke) border-(length:--ui-design-plain-stroke-weight) text-(--ui-color-design-plain-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant plain-accent correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-a-bg) border-(--ui-color-design-plain-a-stroke) border-(length:--ui-design-plain-a-stroke-weight) text-(--ui-color-design-plain-a-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant plain-accent highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-a-bg) border-(--ui-color-design-plain-a-stroke) border-(length:--ui-design-plain-a-stroke-weight) text-(--ui-color-design-plain-a-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant plain-accent to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-a-bg) border-(--ui-color-design-plain-a-stroke) border-(length:--ui-design-plain-a-stroke-weight) text-(--ui-color-design-plain-a-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant plain-no-accent correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-na-bg) border-(--ui-color-design-plain-na-stroke) border-(length:--ui-design-plain-na-stroke-weight) text-(--ui-color-design-plain-na-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant plain-no-accent highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-na-bg) border-(--ui-color-design-plain-na-stroke) border-(length:--ui-design-plain-na-stroke-weight) text-(--ui-color-design-plain-na-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant plain-no-accent to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-plain-na-bg) border-(--ui-color-design-plain-na-stroke) border-(length:--ui-design-plain-na-stroke-weight) text-(--ui-color-design-plain-na-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;

exports[`PageCard > renders with variant selection correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-selection-bg) border-(--ui-color-design-selection-stroke) border-(length:--ui-design-selection-stroke-weight) text-(--ui-color-design-selection-content)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant selection highlight correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-selection-bg) border-(--ui-color-design-selection-stroke) border-(length:--ui-design-selection-stroke-weight) text-(--ui-color-design-selection-content) ring-2 ring-(--ui-color-design-filled-stroke)">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div>
  <!--v-if-->
</div>"
`;

exports[`PageCard > renders with variant selection to correctly 1`] = `
"<div data-orientation="vertical" class="relative flex rounded-lg bg-(--ui-color-design-selection-bg) border-(--ui-color-design-selection-stroke) border-(length:--ui-design-selection-stroke-weight) text-(--ui-color-design-selection-content) transition has-focus-visible:ring-2 has-focus-visible:ring-primary">
  <div class="relative flex flex-col flex-1 lg:grid gap-x-8 gap-y-4 p-4 sm:p-6">
    <div class="flex flex-col flex-1 items-start">
      <!--v-if-->
      <div class="inline-flex items-center mb-2.5"><svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" aria-hidden="true" data-slot="icon" class="size-5 shrink-0">
          <path fill="currentColor" fill-rule="evenodd" d="M14.05 15.886a6.37 6.37 0 1 1 1.836-1.837l3.311 3.311a1 1 0 0 1 0 1.414l-.422.423a1 1 0 0 1-1.414 0zm1.058-5.328a4.55 4.55 0 1 1-9.098 0 4.55 4.55 0 0 1 9.099 0" clip-rule="evenodd"></path>
        </svg></div>
      <div class="flex-1">
        <div class="text-2xl text-pretty font-(--ui-font-weight-semi-bold)">Title</div>
        <div class="text-lg text-pretty mt-1">Description</div>
      </div>
      <!--v-if-->
    </div>
  </div><a href="https://github.com/bitrix24" rel="noopener noreferrer" aria-label="Title" class="focus:outline-none peer"><span class="absolute inset-0" aria-hidden="true"></span></a>
</div>"
`;
